# plays-with-clickhouse

./: Cargo.toml  README.md
1-hello-world/: Cargo.toml  README.md
1-hello-world/src/: main.rs
2-dynamic-data/: Cargo.toml  README.md
2-dynamic-data/src/: main.rs
3-another-crate/: Cargo.toml
3-another-crate/src/: main.rs
4-value-and-co/: Cargo.toml  README.md
4-value-and-co/src/: main.rs
