[package]
name = "another-crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clickhouse-rs = { version = "1.0.0-alpha.1", default-features = false, features = [
    "async_std",
] }
async-std = { version = "1.11", features = ["attributes"] }
